<resources>
    <string name="app_name">SmartEnem</string>
    <string name="loading">Carregando... Favor aguardar!</string>

    <!-- Strings do menu floating -->
    <string name="simulado">Simulado</string>
    <string name="estudo">Estudo</string>
    <string name="redacao">Redação</string>
    <string name="formulas">Fórmulas</string>
    <string name="dicas">Dicas</string>

    <!-- Strings do menu slider -->
    <string name="premium">Versão Premium</string>
    <string name="home">Notícias do Enem</string>
    <string name="calendar">Calendário</string>
    <string name="plano">Plano de Estudo</string>
    <string name="metas">Metas</string>
    <string name="progresso">Desempenhos</string>
    <string name="indica">Compartilhar</string>
    <string name="videos">Vídeos</string>
    <string name="action_settings">Configurações</string>
    <string name="ajuda">Ajuda</string>
    <string name="sobre">Sobre</string>
    <string name="disciplinas">Disciplinas</string>

    <string name="cad_quest">Cadastrar Questão</string>
    <string name="title_activity_metas">Metas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_list">Calendário Enem</string>
    <string name="title_activity_detail">Detalhes do Evento</string>

    <!-- Strings config metas -->
    <string name="titulo_Metas">Configurar as Metas</string>
    <string name="vlrExec">Valor já executado</string>
    <string name="tit_dialog_dedic">Nível de dedicação</string>
    <string name="nivel_dedic1">Pouco dedicado</string>
    <string name="apoio_nivel1">Tem diversas outras atividades além do estudo e vai dedicar apenas algumas horas vagas.</string>
    <string name="nivel_dedic2">Dedicado</string>
    <string name="apoio_nivel2">Apesar de ter outras atividades no dia a dia, vai dedicar pelo menos 2 horas diárias para o estudo.</string>
    <string name="nivel_dedic3">Bastante Dedicado</string>
    <string name="apoio_nivel3">Divide o tempo entre o estudo e outras atividades, porém dedica cerca de 4 horas diárias ao estudo.</string>
    <string name="nivel_dedic4">Dedicação Exclusiva</string>
    <string name="apoio_nivel4">Totalmente dedicado e focado, uma boa nota no Enem é o seu objetivo. Pelo menos 8 horas de estudo por dia.</string>
    <string name="titulo_dialog_meta">Questões para estudar</string>
    <string name="apoio_meta">Defina aqui a quantidade de questões referente a esta área do conhecimento que você pretende estudar por dia</string>
    <string name="hint_meta">*qtd questões a estudar</string>
    <string name="titulo_dialog_meta_red">Redações a criar</string>
    <string name="apoio_red">No caso das Redações defina quantas redações você pretende fazer por semana. \nDica: escolha um número de 1 a 5 de acordo com o seu nivel de dedicação</string>
    <string name="hint_red">*qtd redações</string>
    <string name="titulo_dialog_simul_compac">Simulados Compactos</string>
    <string name="apoio_compac">Simulados compactos são voltados para o treino em determinadas áreas. Não têm controle de tempo e a quantidade de questões são variáveis. \nÉ uma prática que auxilia os estudos das matérias</string>
    <string name="hint_simulados">*qtd simulados</string>
    <string name="titulo_dialog_simul_comple">Simulados Completos</string>
    <string name="apoio_comple">Simulados completos buscam reproduzir a prova do Enem como ela é. na Quantidade de questões e no tempo disponível para a realização. \nÉ uma prática que busca preparar o estudante para o ambiente do dia da prova</string>

    <!-- Strings gráficos de desempenho -->
    <string name="nome_graf_item1">Estudos Diários</string>
    <string name="titulo_graficos">Selecione uma Disciplina</string>
    <string name="tit_graficos">Desempenhos</string>
    <string name="title_activity_graf">Desempenho</string>
    <string name="tit_dicas">Dicas Úteis</string>

    <!-- Strings Plano de Estudos -->
    <string name="titulo_planestud">Plano de Estudos</string>
    <string name="titulo_barra">Planejamento</string>

    <!-- Strings pagina Sobre -->
    <string name="about_frag_title">Sobre o SmartEnem</string>

    <string name="about_frag_mission_title">Missão</string>
    <string name="about_frag_mission_desc">
        Inspirar e transformar a vida das pessoas com a possibilidade
        de acesso ao ensino superior através do ENEM.
    </string>

    <string name="about_frag_vision_title">Visão</string>
    <string name="about_frag_vision_desc">
        A melhor e mais inovadora experiência de estudo e conhecimento
        para um melhor desempenho no ENEM.
    </string>

    <string name="about_frag_values_title">Valores</string>
    <string name="about_frag_values_desc">
        Ética, responsabilidade, espírito de equipe, inspiração e
        foco.
    </string>

    <string name="about_frag_ethic_title">Ética e integridade</string>
    <string name="about_frag_ethic_desc">
        A ética e a integridade fazem parte da nossa cultura e são
        essenciais para o nosso projeto.
    </string>

    <string name="about_frag_social_networks_title">
        Nos acompanhe nas redes sociais e não perca as promoções
    </string>

    <string name="ic_instagram_desc">Ícone do Instagram SmartEnem</string>
    <string name="label_instagram">/SmartEnem</string>

    <string name="ic_facebook_desc">Ícone do Facebook SmartEnem</string>
    <string name="label_facebook">/SmartEnemFace</string>

    <string name="ic_twitter_desc">Ícone do Twitter SmartEnem</string>
    <string name="label_twitter">/SmartEnemTwitter</string>

    <string name="ic_youtube_desc">Ícone do YouTube SmartEnem</string>
    <string name="label_youtube">/SmartEnemYT</string>

    <string name="ic_linkedin_desc">Ícone do LinkedIn SmartEnem</string>
    <string name="label_linkedin">/SmartEnemLkIn</string>
    <string name="info_linkedin">Para oportunidades de emprego!</string>

    <string name="ic_cnpj_desc">Ícone do CNPJ SmartEnem</string>
    <string name="label_cnpj">CNPJ 25.002.230/0001&#8211;10</string>

    <!-- Strings pagina Versão Premium -->
    <string name="title_version_premium">Adquira a Versão Premium</string>

    <string name="premium_title">Versão Premium</string>
    <string name="premium_desc">
        Ao adquirir a versão <i>premium</i> do APP <b>SmartEnem</b> você terá acesso
        a todo conteúdo disponível, sem propagandas. A licença de uso
        livre vale por um ano. Quando for renovar você pode pagar de
        novo ou voltar para a versão gratuita.
    </string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="estudo_title">Disciplinas para Estudo</string>
    <string name="estudo_activity">Hora do Estudo</string>
    <string name="exporeda_activity">Proposta de Redação</string>

    <!-- Strings dos cards de apresentação de formulas -->
    <string name="card_matematica">
        As fórmulas são instrumentos auxiliares na resolução de problemas. O mais importante não é
        decorá-las, mas sim entender a lógica da sua aplicação e nesse sentido agilizar a resolução
        dos problemas. Na matemática as fórmulas são fundamentais para a rapidez nos cálculos e
        consequente resolução das questões.
    </string>
    <string name="card_fisica">
        Em certas provas de longa duração, como é o caso do Enem e de muitos vestibulares, conhecer
        as fórmulas pode significar uma boa vantagem, principalmente por conta do escasso tempo
        disponível. Porém nunca devemos esquecer que elas são uma síntese do desenvolvimento de
        um raciocínio.
    </string>
    <string name="card_quimica">
        Na química as fórmulas podem representar as equações químicas, quando são representações
        gráficas das reações que ocorrem entre os diversos elementos da Tabela Periódica, ou uma
        representação gráfica de um composto químico, quando representa o número e o tipo de átomos
        que constituem uma molécula.
    </string>

</resources>
