<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_mission_title"
            style="@style/TextViewContentTitle"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/about_frag_mission_title"/>

        <TextView
            android:id="@+id/tv_mission_desc"
            style="@style/AboutFragTextViewContent"
            android:layout_below="@+id/tv_mission_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/about_frag_mission_desc"/>

        <TextView
            android:id="@+id/tv_vision_title"
            style="@style/TextViewContentTitle"
            android:layout_below="@+id/tv_mission_desc"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/about_frag_vision_title"/>

        <TextView
            android:id="@+id/tv_vision_desc"
            style="@style/AboutFragTextViewContent"
            android:layout_below="@+id/tv_vision_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/about_frag_vision_desc"/>

        <TextView
            android:id="@+id/tv_values_title"
            style="@style/TextViewContentTitle"
            android:layout_below="@+id/tv_vision_desc"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/about_frag_values_title"/>

        <TextView
            android:id="@+id/tv_values_desc"
            style="@style/AboutFragTextViewContent"
            android:layout_below="@+id/tv_values_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/about_frag_values_desc"/>

        <TextView
            android:id="@+id/tv_ethic_title"
            style="@style/TextViewContentTitle"
            android:layout_below="@+id/tv_values_desc"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/about_frag_ethic_title"/>

        <TextView
            android:id="@+id/tv_ethic_desc"
            style="@style/AboutFragTextViewContent"
            android:layout_below="@+id/tv_ethic_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/about_frag_ethic_desc"/>

        <TextView
            android:id="@+id/tv_social_networks_title"
            style="@style/TextViewContentTitle"
            android:layout_marginBottom="14dp"
            android:layout_below="@+id/tv_ethic_desc"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/about_frag_social_networks_title"/>

        <ImageView
            android:id="@+id/iv_instagram"
            style="@style/ImageViewLink"
            android:layout_below="@+id/tv_social_networks_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/ic_instagram_desc"
            android:src="@mipmap/ic_instagram_black_18dp"/>
        <TextView
            android:id="@+id/tv_instagram"
            style="@style/TextViewLink"
            android:layout_alignTop="@+id/iv_instagram"
            android:layout_toEndOf="@+id/iv_instagram"
            android:layout_toRightOf="@+id/iv_instagram"
            android:text="@string/label_instagram"/>

        <ImageView
            android:id="@+id/iv_facebook"
            style="@style/ImageViewLink"
            android:layout_below="@+id/iv_instagram"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/ic_facebook_desc"
            android:src="@mipmap/ic_facebook_box_black_18dp"/>
        <TextView
            android:id="@+id/tv_facebook"
            style="@style/TextViewLink"
            android:layout_alignTop="@+id/iv_facebook"
            android:layout_toEndOf="@+id/iv_facebook"
            android:layout_toRightOf="@+id/iv_facebook"
            android:text="@string/label_facebook"/>

        <ImageView
            android:id="@+id/iv_twitter"
            style="@style/ImageViewLink"
            android:layout_below="@+id/iv_facebook"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/ic_twitter_desc"
            android:src="@mipmap/ic_twitter_black_18dp"/>
        <TextView
            android:id="@+id/tv_twitter"
            style="@style/TextViewLink"
            android:layout_alignTop="@+id/iv_twitter"
            android:layout_toEndOf="@+id/iv_twitter"
            android:layout_toRightOf="@+id/iv_twitter"
            android:text="@string/label_twitter"/>

    </RelativeLayout>


</androidx.core.widget.NestedScrollView>