<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.com.ciadeideias.smartenem.ListActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_list" />

    <!-- Incluir o FAB LAYOUT AQUI -->
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fabMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="00dp"
        android:layout_marginBottom="0dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        fab:menu_icon="@drawable/ic_plus_w"
        fab:menu_colorNormal="@color/colorPrimaryDark"
        fab:menu_colorPressed="@color/colorAccent"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_labels_style="@style/MenuLabelsStyle">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clipboard_text_w"
            app:fab_colorNormal="@color/colorPrimaryDark"
            app:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_label="@string/simulado"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_book_open_page_variant_w"
            app:fab_colorNormal="@color/colorPrimaryDark"
            app:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_label="@string/estudo"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pen_w"
            app:fab_colorNormal="@color/colorPrimaryDark"
            app:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_label="@string/redacao"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chemical_weapon_w"
            app:fab_colorNormal="@color/colorPrimaryDark"
            app:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_label="@string/formulas" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pill_w"
            app:fab_colorNormal="@color/colorPrimaryDark"
            app:fab_colorPressed="@color/colorAccent"
            fab:fab_size="mini"
            fab:fab_label="@string/dicas" />

    </com.github.clans.fab.FloatingActionMenu>


</android.support.design.widget.CoordinatorLayout>
