<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/gray"
        android:padding="15dp"
        android:layout_margin="40dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_fechar_red"
        android:background="@drawable/ic_x_fechar"
        android:layout_gravity="right"
        android:clickable="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="gravity"
            android:textSize="18dp"
            android:textStyle="bold"
            android:id="@+id/titulo_dialog_meta_red"
            android:text="@string/titulo_dialog_meta_red"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:id="@+id/apoio_meta_red"
            android:text="@string/apoio_red"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_meta_red">
       <EditText
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/edt_meta_red"
           android:hint="@string/hint_red"
           android:text="0"
           android:textSize="12dp"
           android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/edt_meta_red"
            android:layout_centerVertical="true"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp"
            android:text="redações/semana"/>
    </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:id="@+id/button_salvar_meta_red"
            android:background="#91abaf"
            android:text="Salvar"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>
